syntax = "proto3";

package registration;

option go_package = ".;pb";

message RegistrationUserRequest {
  string name = 1;
  string password = 2;
  string email = 3;
  string phone = 4;
}

message RegistrationUserResponse {
  string id = 1;
}

service RegistrationUserService {
  rpc RegistrationUser(RegistrationUserRequest) returns (RegistrationUserResponse);
}